--- a/app/assets/stylesheets/multi-screen.scss
+++ b/app/assets/stylesheets/multi-screen.scss
@@ -16,6 +16,10 @@
           top: -4px;
           right: 120px;
         }
+
+        .dropdown-toggle {
+          margin-top: 20px !important;
+        }
       }
     }
   }
