--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,22 @@
-<h2>Sign up</h2>
+<div class="container p-t-1">
+  <div class="row">
+    <div class="col-lg-6 col-lg-offset-3">
+      <h2><%= t "signup" %></h2>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+        <div class="form-inputs">
+          <%= f.input :email, label: t("email"), required: true, autofocus: true %>
+          <%= f.input :password, label: t("password"), required: true, hint: (t("minimum_password_length", length: @minimum_password_length.to_s) if @minimum_password_length) %>
+          <%= f.input :password_confirmation, label: t("password_confirmation"), required: true %>
+        </div>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+        <div class="form-actions">
+          <%= f.button :submit, t("signup"), class: "btn btn-primary" %>
+        </div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
-
-<script type="text/javascript">
-	$(".nav-item").removeClass("active");
-	$(".nav-item.signup").addClass("active");
-</script>
+</div>
