--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,7 +97,7 @@
   </div>
 </div>
 
-<div class="main-content">
+<div class="main-content <%= controller_name %> <%= action_name %>">
   <%= flash_messages %>
   <%= yield %>
 </div>
