--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "conversations";
 @import "welcome";
 @import "devise";
+@import "users";
 
 body {
   font-family: 'Open Sans', sans-serif;
