--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.main-content  {
+  &.registrations {
+    margin-top: 210px;
+
+    form {
+      .help-block {
+        color: red;
+      }
+    }
+  }
+}
