--- a/app/views/campaigns/_campaign.html.erb
+++ b/app/views/campaigns/_campaign.html.erb
@@ -7,11 +7,10 @@
     <p class="card-text"><%= truncate(campaign.description, length: 200) %></p>
   </div>
   <ul class="list-group list-group-flush">
-    <% campaign.campaign_items.each do |item| %>
     <li class="list-group-item">
-      <%= "#{item.label} - #{item.progress}%" %>
-      <progress class="progress progress-striped progress-success" value="<%= item.progress %>" max="100"></progress>
+      <%= "#{campaign.overall_progress}%" %>
+      <progress class="progress progress-striped progress-success" value="<%= campaign.overall_progress %>" max="100"></progress>
     </li>
-    <% end %> 
+    
   </ul>
 </div>
