--- a/app/views/welcome/_campaign.html.erb
+++ b/app/views/welcome/_campaign.html.erb
@@ -1,20 +1,21 @@
 <a class="carousel-item <%= index == 0 ? 'active' : ''%>" href="<%= campaign_path(campaign) %>">
   <img src="<%= campaign.image_url %>">
-   <div class="description">
-    <h1><%= campaign.title %></h1>
-    <p><%= truncate(campaign.description, length: 100) %></p>
-    <div class="campaign-info">
-      <span class="raised">
-        <% campaign.campaign_items.each do |item| %>
-          <span class="value label label-pill label-success"><%= "#{item.target_qty} #{item.label} - #{item.progress}%" %></span>
-        <% end %> 
-      </span>
-    </div>
+  <progress class="progress progress-striped progress-animated progress-success" value="<%= campaign.overall_progress %>" max="100"><%= campaign.overall_progress %></progress>
+  <div class="description">
+  <h1><%= campaign.title %></h1>
+  <p><%= truncate(campaign.description, length: 100) %></p>
+  <div class="campaign-info">
+    <span class="raised">
+      <% campaign.campaign_items.each do |item| %>
+        <span class="value label label-pill label-success"><%= "#{item.target_qty} #{item.label} - #{item.progress}%" %></span>
+      <% end %> 
+    </span>
+  </div>
   </div>
 </a>
 
 <!-- <img src="http://kodesolution.com/demo/nonprofit/charityfund-html/images/bg/bg5.jpg">
-      <progress class="progress progress-striped progress-animated progress-success" value="70" max="100">70%</progress>
+      <progress class="progress progress-striped progress-animated progress-success" value="<%= campaign.overall_progress %>" max="100">70%</progress>
        <div class="description">
         <h1>Trợ cấp cho trẻ em nghèo</h1>
         <p>Quyên góp cho trẻ em nghèo, để các em có điều kiện cấp sách tới trường</p>
