--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,33 +1,19 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th>Location</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= truncate( post.description, length: 50) %></td>
-        <td><%= image_tag post.main_image_url %></td>
-        <td><%= post.location %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
 <%= link_to 'New Post', new_post_path %>
+<h1>Listing Posts</h1>
+<div class="row">
+<% @posts.each do |post| %>
+ <div class="col-md-4"> 
+  <div class="card">
+  <%= link_to (image_tag post.main_image_url), post %>
+    <div class="card-block">
+      <h4 class="card-title"><%= post.title %></h4>
+      <p class="card-text"><%= post.description %></p>
+    </div>
+  </div> 
+  </div> 
+<% end %>
+</div>
+</div>
