add post item, post request, and add user_id to post

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+  <div class="col-md-6">
 <%= simple_form_for(@post) do |f| %>
   <%= f.error_notification %>
 
@@ -12,3 +14,7 @@
     <%= f.button :submit %>
   </div>
 <% end %>
+</div>
+<div class="col-md-6">
+</div>
+</div>
