localize error messages

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -2,5 +2,6 @@ $bg_color: #fff;
 $primary_color: #FE9322;
 $dark_primary_color: #D47B1D;
 $secondary_color: #222;
+$error_color: #a94442;
 
 $navbar_header_height: 50px;
