--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,18 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.posts {
+	.container {
+		margin-top: 210px;
+	}
+	
+	.card {
+		img {
+			width: 100%;
+			height: auto;
+		}
+	}
+
+	form {
+		h1 {
+			text-align: center;
+		}
+	}
+}
