--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Post</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <%= render 'form' %>
+      
+			<%= link_to 'Show', @post %> |
+			<%= link_to 'Back', posts_path %>
+    </div>
+  </div>
+</div>
