--- a/app/views/admin/campaigns/new.html.erb
+++ b/app/views/admin/campaigns/new.html.erb
@@ -5,6 +5,7 @@
 
   <div class="form-inputs">
     <%= f.input :title %>
+    <%= f.input :end_date, as: :date, start_year: Date.today.year, end_year: Date.today.year + 1, order: [:day, :month, :year], html5: true %>
     <%= f.input :description, as: :text %>
     <%= f.input :donation_instruction, as: :text %>
     <%= f.input :gmap_location, as: :text %>
