--- a/app/views/me/campaigns/_form.html.erb
+++ b/app/views/me/campaigns/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @campaign, :url => admin_campaign_path(@campaign), :method => :put do |f| %>
+<%= simple_form_for @campaign, :url => me_campaign_path(@campaign), :method => :put do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
