--- a/app/views/me/campaigns/show.html.erb
+++ b/app/views/me/campaigns/show.html.erb
@@ -2,14 +2,14 @@
 
 <p>
   <%= link_to "View", campaign_path(@campaign) %> | 
-  <%= link_to 'Edit', edit_admin_campaign_path(@campaign) %> |
-  <%= link_to "Publish", publish_admin_campaign_path(@campaign), :method => 'put' %> |
-  <%= link_to "Add Item", new_admin_campaign_campaign_item_path(@campaign) %> |
-  <%= link_to "Add Donation", new_admin_campaign_donation_path(@campaign) %>
+  <%= link_to 'Edit', edit_me_campaign_path(@campaign) %> |
+  <%= link_to "Publish", publish_me_campaign_path(@campaign), :method => 'put' %> |
+  <%= link_to "Add Item", new_me_campaign_campaign_item_path(@campaign) %> |
+  <%= link_to "Add Donation", new_me_campaign_donation_path(@campaign) %>
 </p>
 <p>
-  <%= link_to "Expire", expire_admin_campaign_path(@campaign), :method => 'put' %> |
-  <%= link_to "Finish", finish_admin_campaign_path(@campaign), :method => 'put' %>
+  <%= link_to "Expire", expire_me_campaign_path(@campaign), :method => 'put' %> |
+  <%= link_to "Finish", finish_me_campaign_path(@campaign), :method => 'put' %>
 </p>
 
 
@@ -65,11 +65,11 @@
       <% @campaign.campaign_items.each_with_index do |item, index| %>
       <tr>
         <td><%= index %></td>
-        <td><%= link_to item.name, admin_campaign_campaign_item_path(@campaign, item) %></td>
+        <td><%= link_to item.name, me_campaign_campaign_item_path(@campaign, item) %></td>
         <td><%= item.label %></td>
         <td><%= item.target_qty %></td>
         <td><%= item.collected_qty %></td>
-        <td><%= link_to "Edit", edit_admin_campaign_campaign_item_path(@campaign, item) %></td>
+        <td><%= link_to "Edit", edit_me_campaign_campaign_item_path(@campaign, item) %></td>
       </tr>
       <% end %>
     </tbody>
@@ -91,9 +91,9 @@
       <% @campaign.donations.each_with_index do |donation, index| %>
       <tr>
         <td><%= index %></td>
-        <td><%= link_to donation.name, admin_campaign_donation_path(@campaign, donation) %></td>
+        <td><%= link_to donation.name, me_campaign_donation_path(@campaign, donation) %></td>
         <td><%= donation.description %></td>
-        <td><%= link_to "Edit", edit_admin_campaign_donation_path(@campaign, donation) %></td>
+        <td><%= link_to "Edit", edit_me_campaign_donation_path(@campaign, donation) %></td>
       </tr>
       <% end %>
     </tbody>
