--- a/app/views/me/campaigns/new.html.erb
+++ b/app/views/me/campaigns/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Campaign</h1>
 
-<%= simple_form_for @campaign, :url => admin_campaigns_path, :method => :post do |f| %>
+<%= simple_form_for @campaign, :url => me_campaigns_path, :method => :post do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
