--- a/app/views/me/messages/new.html.erb
+++ b/app/views/me/messages/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h2 class="section-header">Start conversation</h2>
 
-  <%= form_tag admin_messages_path, method: :post do %>
+  <%= form_tag me_messages_path, method: :post do %>
     <div class="form-group">
       <%= label_tag 'recipients', 'Choose recipients' %>
       <%= select_tag 'recipients', recipients_options, multiple: true, class: 'form-control chosen-it' %>
