--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,5 +1,6 @@
 $bg_color: #fff;
 $primary_color: #FE9322;
+$primary_blur_color: rgba(254, 147, 34, 0.8);
 $dark_primary_color: #D47B1D;
 $secondary_color: #222;
 $error_color: #a94442;
