--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid events-list">
-    <% @campaigns.in_groups_of(2) do |g| %>
+<div class="container events-list">
+    <% @campaigns.in_groups_of(3) do |g| %>
       <div class="row">
         <% g.compact.each do |campaign| %>
             <%= render partial: 'campaign', locals: {campaign: campaign} %>
