--- a/app/assets/stylesheets/campaigns.scss
+++ b/app/assets/stylesheets/campaigns.scss
@@ -3,35 +3,43 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .events-detail {
-    .event-content {
-        img {
-            width: 100%;
-        }
-        h3 {
-            font-weight: bold;
-            font-size: 25px;
-            margin-bottom: 30px;
-        }
-        .hero-img {
-            min-height: 400px;
-        }
-        .container {
-            margin-left: 50px;
-            margin-top: 30px;
-            .time-details, .venue-details {
-                margin-left: 20px;
-                margin-bottom: 20px;
-            }
-            .img-spacer {
-                text-align: center;
-                margin: 60px;
-            }
-            .extended-description {
-                margin-top: 20px;
-                img {
-                    width: 100%;
-                }
-            }
-        }
+  .event-content {
+    img {
+      width: 100%;
     }
+    h3 {
+      font-weight: bold;
+      font-size: 25px;
+      margin-bottom: 30px;
+    }
+    .hero-img {
+      min-height: 400px;
+    }
+    .container {
+      margin-left: 50px;
+      margin-top: 30px;
+      .time-details, .venue-details {
+        margin-left: 20px;
+        margin-bottom: 20px;
+      }
+      .img-spacer {
+        text-align: center;
+        margin: 60px;
+      }
+      .extended-description {
+        margin-top: 20px;
+        img {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+.events-list {
+  margin-top: 220px;
+
+  .row {
+    margin-bottom: 30px;
+  }
 }
