--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
   <div class="card">
   <%= link_to (image_tag post.main_image_url), post %>
     <div class="card-block">
-      <h4 class="card-title"><%= post.title %></h4>
+    	<h4 class="card-title"><%= link_to post.title, post_path(post) %></h6></h4>
       <p class="card-text"><%= post.description %></p>
     </div>
   </div> 
