--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,26 +1,28 @@
-<div class="container">
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @post.description %>
-</p>
-
-<p>
-  <strong>Image url:</strong>
-  <%= image_tag @post.main_image.url %>
-</p>
-
-<p>
-  <strong>Location:</strong>
-  <%= @post.location %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<div class="container-fluid no-pad detail-page">
+  <div class="row no-pad">
+    <div class="col-md-3 sidebar">
+      <h4 class="location">
+        <%= fa_icon "map-marker" %>
+        <%= @post.location %>
+      </h4>
+      <div class="clearfix"></div>
+      <a href="#">
+        <button class="btn btn-lg btn-block btn-primary"> <%= t(".request_now") %> </button>
+      </a>  
+      <a href="#">
+        <button class="btn btn-lg btn-block btn-info"> <%= t(".send_message") %> </button>
+      </a> 
+      <div class="item-list">
+      </div>
+    </div>
+    <div class="col-md-9 content">
+      <div class="hero-img hidden-sm-down" style="background-image: url('http://pattayatoday.net/wp-content/uploads/2015/09/CHARITY-MIDNIGHT-RUN-2015-600x315.jpg')"><!-- url(@post.main_image.url) --></div>
+      <div class="container">
+        <h3><%= @post.title %></h3>
+        <div class="extended-description">
+          <%= @post.description %>
+        </div>
+      </div>  
+    </div>
+  </div>
 </div>
