--- a/app/views/me/campaigns/_form.html.erb
+++ b/app/views/me/campaigns/_form.html.erb
@@ -5,8 +5,8 @@
     <%= f.input :title %>
     <%= f.input :end_date, as: :date, start_year: Date.today.year, end_year: Date.today.year + 1, order: [:day, :month, :year], html5: true %>
     <%= f.input :image_url %>
-    <%= f.input :description, as: :text %>
-    <%= f.input :donation_instruction, as: :text %>
+    <%= f.input :description, as: :text, :input_html => { :rows => 10 } %>
+    <%= f.input :donation_instruction, as: :text, :input_html => { :rows => 4 } %>
     <%= f.input :gmap_location, as: :text %>
   </div>
 
