--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,6 +6,13 @@
 
       .col-md-4 {
         margin-bottom: 30px;
+
+        .card {
+          .post-status {
+            margin-right: 15px;
+          }
+        }
+
       }
     }
   }
