--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="form-inputs">
     <%= f.input :title, label: false, placeholder: t(".title") %>
-    <%= f.input :description, label: false, placeholder: t(".description") %>
+    <%= f.input :description, label: false, as: :text, placeholder: t(".description"), :input_html => { :rows => 10 }  %>
     <%= f.input :location, label: false, placeholder: t(".location") %>
     <%= f.input :main_image, as: :file, class: 'form-control', label: t(".main_image") %>
   </div>
