--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
   <%= link_to (image_tag post.main_image_url), post %>
     <div class="card-block">
     	<h4 class="card-title"><%= link_to post.title, post_path(post) %></h6></h4>
-      <p class="card-text"><%= post.description %></p>
+      <p class="card-text"><%= truncate(post.description, length: 50) %></p>
     </div>
   </div> 
   </div> 
