--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,7 @@
     <div class="card-block">
     	<h4 class="card-title"><%= link_to post.title, post_path(post) %></h6></h4>
       <p class="card-text"><%= truncate(post.description, length: 50) %></p>
+      <p class="card-text"><%= post.location %></p>
     </div>
   </div> 
   </div> 
