Include get location in giveaway flow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -396,4 +396,13 @@ body {
   }
 }
 
+.main-content  {
+  form {
+    .help-block {
+      color: $error_color;
+    }
+  }
+}
+
+
 @import "multi-screen";
