--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,10 @@
 
         <ul class="nav navbar-nav">
           <li class="nav-item posts">
-            <%= active_link_to I18n.t('menu_item_posts'), posts_path, class: 'nav-link' %>
+            <%= active_link_to I18n.t('menu_item_giveaway'), giveaway_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item posts">
+            <%= active_link_to I18n.t('menu_item_find_posts'), posts_path, :active => :exclusive, class: 'nav-link' %>
           </li>
           <li class="nav-item compaigns">
             <%= active_link_to I18n.t("menu_item_campaigns"), campaigns_path, class: 'nav-link' %>
@@ -79,7 +82,7 @@
                   <div class="dropdown-divider"></div>
                   <%= active_link_to I18n.t("menu_item_my_posts"), my_posts_path, class: 'dropdown-item' %>
                   <div class="dropdown-divider"></div>
-                  <%= active_link_to I18n.t("menu_item_edit_profile"), edit_user_registration_path, class: 'dropdown-item' %>
+                  <%= active_link_to I18n.t("menu_item_edit_profile"), edit_user_path(current_user), class: 'dropdown-item' %>
                   <div class="dropdown-divider"></div>
                   <%= active_link_to I18n.t("menu_item_logout"), destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
                 </div>
