--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,47 +1,50 @@
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
+<div class="container">
+  <p>
+    <strong>Name:</strong>
+    <%= @user.name %>
+  </p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
+  <p>
+    <strong>Email:</strong>
+    <%= @user.email %>
+  </p>
 
-<p>
-  <strong>Password:</strong>
-  <%= @user.password %>
-</p>
+  <p>
+    <strong>Password:</strong>
+    <%= @user.password %>
+  </p>
 
-<p>
-  <strong>Is admin:</strong>
-  <%= @user.is_admin %>
-</p>
+  <p>
+    <strong>Is admin:</strong>
+    <%= @user.is_admin %>
+  </p>
 
-<p>
-  <strong>Is organization:</strong>
-  <%= @user.is_organization %>
-</p>
+  <p>
+    <strong>Is organization:</strong>
+    <%= @user.is_organization %>
+  </p>
 
-<p>
-  <strong>Avatar url:</strong>
-  <%= @user.avatar_url %>
-</p>
+  <p>
+    <strong>Avatar url:</strong>
+    <%= @user.avatar_url %>
+  </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @user.description %>
-</p>
+  <p>
+    <strong>Description:</strong>
+    <%= @user.description %>
+  </p>
 
-<p>
-  <strong>Contact address:</strong>
-  <%= @user.contact_address %>
-</p>
+  <p>
+    <strong>Contact address:</strong>
+    <%= @user.contact_address %>
+  </p>
 
-<p>
-  <strong>Contact city:</strong>
-  <%= @user.contact_city %>
-</p>
+  <p>
+    <strong>Contact city:</strong>
+    <%= @user.contact_city %>
+  </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+  <%= link_to 'Edit', edit_user_path(@user) %> |
+  <%= link_to 'Back', users_path %>
+
+</div>
