add claim button

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,6 +8,8 @@
         margin-bottom: 30px;
 
         .card {
+          .padding: 10px;
+          
           .post-status {
             margin-right: 15px;
           }
