--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,8 @@
     <div class="card-block">
     	<h4 class="card-title"><%= link_to post.title, post_path(post) %></h6></h4>
       <p class="card-text"><%= truncate(post.description, length: 50) %></p>
-      <p class="card-text"><%= post.location %></p>
+      <span class="card-text"><i class="fa fa-map-marker"></i> <%= post.location %></span>
+      <%= active_link_to I18n.t('posts.claim'), post_path(post), class: 'btn btn-primary pull-right' %>
     </div>
   </div> 
   </div> 
