--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "devise";
 @import "users";
 @import "posts";
+@import "categories";
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -60,7 +61,7 @@ body {
   .navbar-brand {
     position: relative;
     z-index: 2;
-    
+
     a {
       text-decoration: none;
     }
