animation for select category

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "bootstrap";
 @import "bootstrap-fix";
 @import "font-awesome";
+@import "animate";
 @import 'chosen';
 @import 'ImageSelect';
 @import "common";
