--- a/app/assets/stylesheets/multi-screen.scss
+++ b/app/assets/stylesheets/multi-screen.scss
@@ -9,6 +9,7 @@
         top: 0;
         height: 70px;
         width: 100%;
+        background: rgba(245,245,245,0.65);
 
         .navbar-brand {
           .fa {
