--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,7 +84,6 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 169px;
   z-index: 999;
 
   background-color: $bg_color;
@@ -385,17 +384,17 @@ body {
 }
 
 .main-content {
-  margin-top: 178px;
+  min-height: 230px;
+  margin-top: 100px;
+  margin-bottom: 50px;
 }
 
 .alert {
   position: relative;
   top: 7px;
-  color: #fff;
   border: none;
-  font-size: 13px;
   text-align: center;
-  width: 300px;
+  width: 500px;
 
   i {
     font-size: 20px;
@@ -405,7 +404,8 @@ body {
   }
 
   &.alert-info {
-    background-color: #f0ad4e;
+    background-color: #FFD8A0;
+    color: #AD6D11;
   }
 }
 
