--- a/app/views/giveaway/select_category.html.erb
+++ b/app/views/giveaway/select_category.html.erb
@@ -1,12 +1,11 @@
 <div class="container">
-  <h2>Choose a category</h2>
+  <h2 class="section-header">Choose a category</h2>
   <%= render partial: 'category', collection: @categories %>
 </div>
 <script>
   $(function () {
     $(".category_block").each(function (index) {
       var $ele = $(this);
-      $ele.hide();
       setTimeout(function () {
         $ele.show();
         $ele.addClass('animated flipInY');
